--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10867,9 +10867,15 @@ Copyright (c) 2015 Daniel Eden
     margin: 6em auto;
   }
 }
+
 .cd-headline {
   font-size: 3rem;
   line-height: 1.2;
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 @media only screen and (min-width: 768px) {
